<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="pl.marcinsendyka.exampleweathermap.android.SelectCityFragment"
        android:label="@string/select_city_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="pl.marcinsendyka.exampleweathermap.android.ShowWeatherFragment"
        android:label="@string/weather_data_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_showWeatherFragment_to_errorFragment"
            app:destination="@id/errorFragment" />
    </fragment>
    <fragment
        android:id="@+id/errorFragment"
        android:name="pl.marcinsendyka.exampleweathermap.android.ErrorFragment"
        android:label="@string/error_fragment_label" >
        <action
            android:id="@+id/action_errorFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>